--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -23,7 +23,7 @@
 <div class="city">
   <h2>India</h2>
   <p>Since Yesterday i am in Dev-Ops training @ Hotel Keys.</p>
-  <p>Cool to be part of Devops training.</p>
+  <p>Cool to be part of Devops training.This time it is launched from slave1</p>
 </div>
 <div class="city">
   <h2>2016 Started new office in New Jersey</h2>
